--- a/css/main.scss
+++ b/css/main.scss
@@ -99,11 +99,10 @@ body {
     }
 }
 
-input[type=text]:not(input[type=text]:last-child){
+input[type=text]{
     background: none;
     border: none;
     width: 40px;
-    visibility: hidden;
     font-size: 1em;
     text-align: center;
     color: #fff;
@@ -129,8 +128,4 @@ input[type=text]:not(input[type=text]:last-child){
     padding: 2.5vh 0;
     font-size: 2em;
     
-}
-
-.minus-plate{
-    visibility: hidden;
 }
