--- a/css/main.css
+++ b/css/main.css
@@ -67,17 +67,23 @@ body {
   vertical-align: middle;
   color: #fff; }
 
+.sushi-prices .sushi-button:last-child {
+  margin-bottom: 12.5vh; }
+
 .sushi-prices .price {
   margin: 0px 20vw; }
 
 input[type=text] {
   background: none;
   border: none;
-  width: 40px;
+  width: 30px;
   font-size: 1em;
   text-align: center;
   color: #fff;
   filter: opacity(0.5); }
+
+input[type=text]:last-child {
+  width: 120px; }
 
 .minus-plate i,
 .plus-plate i {
