--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,9 @@ input[type=text] {
 input[type=text]:last-child {
   width: 120px; }
 
+.minus-plate, .tally {
+  visibility: hidden; }
+
 .minus-plate i,
 .plus-plate i {
   cursor: pointer;
